# multi-ai-agent-trading

./: .gitignore  AGENT_ARCHITECTURE.md  AI_VS_RULE_BASED.md  BALANCE_FEATURE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  EXECUTION_AGENT_COMPLETE.md  EXTENDED_SESSION_SUMMARY.md  FILE_TREE.txt  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_SESSION_SUMMARY.md  HESAP_BILGILERI.md  IMPLEMENTATION_COMPLETE.md  LIVE_TRADING_READY.md  MAC_MINI_DEPLOYMENT.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  QUICK_START.md  RABBITMQ_ACCESS.md  RABBITMQ_AUTH_BUG_REPORT.md  RABBITMQ_CLI_MONITORING.md  RABBITMQ_ISSUE.md  README.md  README_CURRENT_STATUS.md  RISK_MANAGER_COMPLETE.md  RUN_STRATEGY_AGENT.md  SESSION_SUMMARY.md  SISTEM_DURUMU.md  STRATEGY_AGENT_COMPLETE.md  SYSTEM_DEPLOYMENT.md  SYSTEM_OPERATIONAL.md  SYSTEM_STATUS.md  TECHNICAL_ANALYSIS_COMPLETE.md  TESTING_OPTIMIZATION_COMPLETE.md  TEST_SCENARIOS.md  TRADE_SORUN_RAPORU.md  TRADING_DECISION_FLOW.md  advanced.config  definitions.json  (+10 more)
Doc/: Multi-Agent Cryptocurrency Trading System Development Guide.md  Multi-Agent Kripto Para Al-Sat Yazılımı Geliştirme Rehberi.md  implementation_guide.md  multi_agent_trading_research.md  technical_architecture.md
api/: dashboard.py  main.py  requirements.txt
claudedocs/: DASHBOARD_ANALYSIS.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DEV-70_RESOLUTION_COMPLETE.md  DEV-76_POSITION_PERSISTENCE_COMPLETE.md  PHASE1_CHECKPOINT.md  PHASE1_COMPLETE.md  PHASE2_PLAN.md  PHASE2_SUMMARY.md  PHASE3_PLAN.md  PHASE3_PROGRESS.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_FINAL_STATUS.md  ROOT_CAUSE_ANALYSIS.md  SESSION_2025-10-10_PHASE1_DEV72.md  SESSION_FIX_SUMMARY.md  SESSION_SUMMARY_2025-10-10.md  STONKJOURNAL_VISUAL_ANALYSIS.md
docs/: GETTING_STARTED.md  PHASE_3_TRADING_JOURNAL.md  PROJECT_STATUS.md
scripts/: backtesting_engine.py  check_balance_locks.py  check_data.py  check_positions.py  create_orders_table.sql  install_reality_check_cron.sh  monitor_system.sh  paper_trading.py  populate_sl_tp_orders.py  reality_check.py  setup.sh  start_agents.sh  start_api.sh  stop_agents.sh  system_status.sh  test_execution.py  test_integration.py  test_risk_manager.py  test_strategy.py  test_technical_analysis.py
systemd/: trading-agents.service  trading-api.service  (+1 more)
(+38 files in other folders)
